contrast prob fixed 7th

--- a/home_page.css
+++ b/home_page.css
@@ -1,7 +1,6 @@
 .introofmetal {
     background-color: black;
-    width: 600px;
-    text-align: center;
+    width: auto;
 }
 h1 {
     color:whitesmoke;
